--- a/index.html
+++ b/index.html
@@ -1,14 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/bootstrap.css"> 
-	<link rel="stylesheet" href="css/style.css">
-	<title>Tinyone</title>
-</head>
-<body>
-<header></header>
-	
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/bootstrap.css"> 
+		<link rel="stylesheet" href="css/style.css">
+		<title>Tinyone</title>
+	</head>
+	<body>
+		<section class="yellow-block">
+			<div class="container">
+				<header>
+						<div class="logo"><a href="#"><img src="img/logo.png" alt="logo"></a></div>
+						<nav>
+							<ul>
+								<li><a href="#">Features</a></li>
+								<li><a href="#">Support</a></li>
+								<li><a href="#">Blog</a></li>
+							</ul>
+						</nav>
+				</header>
+				<div class="row">
+					<div class="col-lg-6 content">
+						<h3>Inspire your inspiration</h3>
+						<h6>Simple to use for your app, products showcase and your inspiration</h6>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros porta lobortis sit</p>
+						<a href="#"><i class="fa fa-android"></i></a>
+						<a href="#"><i class="fa fa-apple"></i></a>
+						<a href="#"><i class="fa fa-windows"></i></a>
+					</div>
+					<div class="col-lg-5 col-lg-offset-1 device">
+						<img src="img/device.png" alt="device">
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="white-block">
+			<div class="container">
+				<div class="for-text">
+					<h3>Tinyone features</h3>
+					<h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</h6>
+				</div>
+				<div class="row">
+					<div class="col-md-4">
+                        <i class="fa fa-tablet" aria-hidden="true"></i>
+                        <div class="column-text">
+                        	<h4>Fully Responsive</h4>
+                        	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fa fa-lemon-o" aria-hidden="true"></i>
+                        <div class="column-text">
+	                        <h4>Fully Layered PSD</h4>
+	                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+	                    </div>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fa fa-folder-o" aria-hidden="true"></i>
+                        <div class="column-text">
+	                        <h4>Font Awesome Icons</h4>
+	                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+	                    </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <i class="fa fa-code" aria-hidden="true"></i>
+                        <div class="column-text">
+	                        <h4>HTML3 &#38; CSS3</h4>
+	                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+	                    </div>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                         <div class="column-text">
+	                        <h4>Email Template</h4>
+	                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+	                    </div>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fa fa-bookmark-o" aria-hidden="true"></i>
+                         <div class="column-text">
+	                        <h4>Free to download</h4>
+	                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+	                    </div>
+                    </div>
+				</div>
+			</div>
+		</section>
+		<section class="dark-block">
+			<div class="container">
+				<h3>Keep in touch with us</h3>
+				<h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</h6>
+				<form action="POST">
+					<input type="text" placeholder="Enter your email to update">
+					<button><span>SUBMIT</span></button>
+				</form>
+				<div class="social">
+					<a href="#"><img src="img/foot-soc1.png" alt="facebook"></a>
+					<a href="#"><img src="img/foot-soc2.png" alt="twitter"></a>
+					<a href="#"><img src="img/foot-soc3.png" alt="google+"></a>
+					<a href="#"><img src="img/foot-soc4.png" alt="hernya-kakaya-to"></a>
+				</div>
+				<footer>
+				 <div class="row footer-content">
+            <div class="col-lg-3">
+                <p>HALOVIETNAM LTD</p>
+                <p>66, Dang Van ngu, Dong Da
+                    Hanoi, Vietnam</p>
+                <p>contact@halovietnam.com</p>
+                <p>+844 35149182</p>
+            </div>
+            <div class="col-lg-2 col-lg-offset-1">
+                <ul>
+                    <li>Example</li>
+                    <li>Shope</li>
+                    <li>License</li>
+                </ul>
+            </div>
+            <div class="col-lg-2">
+                <ul>
+                    <li>Contact</li>
+                    <li>About</li>
+                    <li>Privacy</li>
+                    <li>Terms</li>
+                </ul>
+            </div>
+            <div class="col-lg-2">
+                <ul>
+                    <li>Download</li>
+                    <li>Support</li>
+                    <li>Documents</li>
+                </ul>
+            </div>
+            <div class="col-lg-2">
+                <ul>
+                    <li>Media</li>
+                    <li>Blog</li>
+                    <li>Forums</li>
+                </ul>
+            </div>
+        </div>
+     </div>
+				</footer>
+			</div>	
+		</section>
+	</body>
 </html>
