--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						</nav>
 				</header>
 				<div class="row">
-					<div class="col-lg-6 content">
+					<div class="col-md-6 content">
 						<h3>Inspire your inspiration</h3>
 						<h6>Simple to use for your app, products showcase and your inspiration</h6>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros porta lobortis sit</p>
@@ -30,7 +30,7 @@
 						<a href="#"><i class="fa fa-apple"></i></a>
 						<a href="#"><i class="fa fa-windows"></i></a>
 					</div>
-					<div class="col-lg-5 col-lg-offset-1 device">
+					<div class="col-md-5 col-md-offset-1 device">
 						<img src="img/device.png" alt="device">
 					</div>
 				</div>
@@ -114,31 +114,31 @@
             </div>
             <div class="col-lg-2 col-lg-offset-1">
                 <ul>
-                    <li>Example</li>
-                    <li>Shope</li>
-                    <li>License</li>
+                    <li><a href="#">Example</a></li>
+                    <li><a href="#">Shope</a></li>
+                    <li><a href="#">License</a></li>
                 </ul>
             </div>
             <div class="col-lg-2">
                 <ul>
-                    <li>Contact</li>
-                    <li>About</li>
-                    <li>Privacy</li>
-                    <li>Terms</li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
                 </ul>
             </div>
             <div class="col-lg-2">
                 <ul>
-                    <li>Download</li>
-                    <li>Support</li>
-                    <li>Documents</li>
+                    <li><a href="#">Download</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Documents</a></li>
                 </ul>
             </div>
             <div class="col-lg-2">
                 <ul>
-                    <li>Media</li>
-                    <li>Blog</li>
-                    <li>Forums</li>
+                    <li><a href="#">Media</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Forums</a></li>
                 </ul>
             </div>
         </div>
