--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 		<link rel="stylesheet" href="css/bootstrap.css"> 
 		<link rel="stylesheet" href="css/style.css">
 		<title>Tinyone</title>
+		<script type="text/javascript" src="js/jquery.js"></script>
 	</head>
 	<body>
 		<section class="yellow-block">
 			<div class="container">
 				<header>
 						<div class="logo"><a href="#"><img src="img/logo.png" alt="logo"></a></div>
-						<nav>
+						<button class="navbar-toggle" data-toggle="collapse" data-target="#responsive-menu"><i class="fa fa-bars fa-3x"></i>
+						</button>
+						<nav class="collapse navbar-collapse" id="responsive-menu">
 							<ul>
 								<li><a href="#">Features</a></li>
 								<li><a href="#">Support</a></li>
@@ -26,12 +29,12 @@
 						<h3>Inspire your inspiration</h3>
 						<h6>Simple to use for your app, products showcase and your inspiration</h6>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros porta lobortis sit</p>
-						<a href="#"><i class="fa fa-android"></i></a>
 						<a href="#"><i class="fa fa-apple"></i></a>
+						<a href="#"><i class="fa fa-android"></i></a>
 						<a href="#"><i class="fa fa-windows"></i></a>
 					</div>
 					<div class="col-md-5 col-md-offset-1 device">
-						<img src="img/device.png" alt="device">
+						<img class="img-responsive" src="img/device.png" alt="device">
 					</div>
 				</div>
 			</div>
@@ -105,21 +108,21 @@
 				</div>
 				<footer>
 				 <div class="row footer-content">
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-12  col-sm-12 contacts">
                 <p>HALOVIETNAM LTD</p>
                 <p>66, Dang Van ngu, Dong Da
                     Hanoi, Vietnam</p>
                 <p>contact@halovietnam.com</p>
                 <p>+844 35149182</p>
             </div>
-            <div class="col-lg-2 col-lg-offset-1">
+            <div class="col-lg-2 col-lg-offset-1 col-md-3 col-sm-3 col-xs-6">
                 <ul>
                     <li><a href="#">Example</a></li>
                     <li><a href="#">Shope</a></li>
                     <li><a href="#">License</a></li>
                 </ul>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6">
                 <ul>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">About</a></li>
@@ -127,14 +130,14 @@
                     <li><a href="#">Terms</a></li>
                 </ul>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6">
                 <ul>
                     <li><a href="#">Download</a></li>
                     <li><a href="#">Support</a></li>
                     <li><a href="#">Documents</a></li>
                 </ul>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6">
                 <ul>
                     <li><a href="#">Media</a></li>
                     <li><a href="#">Blog</a></li>
